# send-to-node

./: .gitignore  001-schema-field-definition-name.json  002-schema-definition-venue.json  002-schema-definition-venue.toml  003-create-venue.json  003-create-venue.toml  004-update-venue.json  004-update-venue.toml  005-delete-venue.json  005-delete-venue.toml  006-create-venue.json  006-create-venue.toml  007-update-conflict-1.json  007-update-conflict-1.toml  008-update-conflict-2.json  008-update-conflict-2.toml  009-schema-field-definition-venue.toml  009-update-conflict-merge.json  009-update-conflict-merge.toml  010-schema-definition-event.toml  010-schema-field-definition-venue.json  010-schema-field-definition-venue.toml  011-schema-definition-event.json  011-schema-definition-event.toml  012-create-event.json  012-create-event.toml  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  delete-venue.toml  demo.sh  key.txt  schema-definition-2.toml  schema-definition.toml  schema-field-definition.toml  update-fight-1.toml  update-fight-2.toml  update-fight-3.toml  update-venue.toml
.github/workflows/: release.yml
src/: client.rs  io.rs  main.rs  send-blob.rs  send-operation.rs
