[package]
name = "send-to-node"
version = "0.1.0"
authors = [
    "adz <x1d@adz.garden>",
    "cafca <cafca@001.land>",
    "sandreae <contact@samandreae.com>",
]
description = "Command line tool to send p2panda operations to a node"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/p2panda/send-to-node"
publish = false

[dependencies]
clap = { version = "^3.2.8", features = ["derive"] }
gql_client = "^1.0.6"
hex = "^0.4.3"
p2panda-rs = "^0.6.0"
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "^1.0.83"
tokio = { version = "^1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
