[package]
name = "send-to-node"
version = "0.2.0"
authors = [
    "adz <x1d@adz.garden>",
    "cafca <cafca@001.land>",
    "sandreae <contact@samandreae.com>",
]
description = "Command line tool to send p2panda operations and blobs to a node"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/p2panda/send-to-node"
publish = false
default-run = "send-to-node"

[[bin]]
name = "send-to-node"
path = "src/send-operation.rs"

[[bin]]
name = "send-blob-to-node"
path = "src/send-blob.rs"

[dependencies]
clap = { version = "^4.4.2", features = ["derive"] }
gql_client = "^1.0.7"
hex = "^0.4.3"
p2panda-rs = { git = "https://github.com/p2panda/p2panda", rev = "ffe48e8be09b28373ed8f6d7c073ba1e8687aadb" }
serde = { version = "^1.0.188", features = ["derive"] }
serde_json = "^1.0.105"
tokio = { version = "^1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
