[package]
name = "send-to-node"
version = "0.2.0"
authors = [
    "adz <x1d@adz.garden>",
    "cafca <cafca@001.land>",
    "sandreae <contact@samandreae.com>",
]
description = "Command line tools to send p2panda operations and upload files to a node"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/p2panda/send-to-node"
publish = false
default-run = "send-to-node"

[[bin]]
name = "send-to-node"
path = "src/send-operation.rs"

[[bin]]
name = "send-blob-to-node"
path = "src/send-blob.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
gql_client = "1.0.7"
hex = "0.4.3"
indicatif = "0.17.6"
mime_guess = "2.0.4"
p2panda-rs = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "fs"] }

# Required for cross-compilation in our CI release pipeline
[dependencies.openssl]
version = "0.10.59"
features = ["vendored"]
